gccida/g0/ggc_collect
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_collect/src/ggc-page.c:1901:15: error: use of undeclared identifier 'TV_GC_0'
timevar_push( TV_GC_0); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_collect/src/ggc-page.c:1912:14: error: use of undeclared identifier 'TV_GC_0'
timevar_pop( TV_GC_0); 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_collect/src/obj/ggc-page.o] Error 1
